--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Student\\anaconda32020\\envs\\bazavenv\\python.exe"
+    "python.pythonPath": "C:\\Users\\Student\\anaconda32020\\envs\\piacvenv\\python.exe"
 }
